@@ -1,0 +1,13 @@
+# Package Information for pkg-config
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libpcreposix
+Description: PCREPosix - Posix compatible interface to libpcre
+Version: @PACKAGE_VERSION@
+Libs: -L${libdir} -lpcreposix
+Cflags: -I${includedir}
+Requires.private: libpcre
